Add mockup pictures to the projects

--- a/index.html
+++ b/index.html
@@ -10,13 +10,29 @@
 <body>
   <aside class='sidebar'>Carlos Santamaria</aside>
   <main class='content'>
-    <article class="project first-project">
-      First Project
-      <img class='phone' src="./images/Front.png" alt="flowers">
+    <article class="project fourth-project">
+      <div class="upper-filler"></div>
+      <img class='pr1-img image' src="./images/first.png" alt="Carlos">
+      <div class="lower-text">Me</div>
+
     </article>
-    <article class="project second-project">Second Project</article>
-    <article class="project third-project">Third Project</article>
-    <article class="project fourth-project">Fourth Project</article>
+
+    <article class="project second-project">
+      <div class="upper-filler"></div>
+      <img class='pr1-img image' src="./images/mountains.png" alt="Mountain Style ruby on rails blog">
+      <div class="lower-text">Mountain Style ruby on rails blog</div>
+    </article>
+    <article class="project first-project">
+      <div class="upper-filler"></div>
+      <img class='pr1-img image' src="./images/flowers-shop-responsive.png" alt="Flowers Shop fully responsive HTML & CSS site">
+      <div class="lower-text">Flowers Shop fully responsive HTML & CSS site</div>
+    </article>
+    <article class="project third-project">
+      <div class="upper-filler"></div>
+      <img class='pr1-img image' src="./images/newsweek.png" alt="Newsweek clone. Fully responsive Bootstrap site">
+      <div class="lower-text">Newsweek clone. Fully responsive Bootstrap site</div>
+    </article>
+
   </main>
 </body>
 </html>
