Tweak images and responsive layout

--- a/index.html
+++ b/index.html
@@ -5,34 +5,47 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./assets/reset.css">
   <link rel="stylesheet" href="./assets/style.css">
+  <link href="https://fonts.googleapis.com/css2?family=Martel+Sans:wght@800&family=Work+Sans:wght@100;200&display=swap" rel="stylesheet"> 
   <title>Carlos Santamaria - Portfolio</title>
 </head>
 <body>
-  <aside class='sidebar'>Carlos Santamaria</aside>
+  <aside class='sidebar'>
+    <h1 class="title">
+      DEVELOPER. DESIGNER. FOCUSED & DRIVEN.
+    </h1>
+    <div class="subtitle">
+      Currently designing @Uber. Formerly Experience Design Director @GoPro and Interactive Director @Focus Lab. Follow my work, words and photos below. 
+    </div>
+  </aside>
   <main class='content'>
     <article class="project fourth-project">
       <div class="upper-filler"></div>
-      <img class='pr1-img image' src="./images/first.png" alt="Carlos">
-      <div class="lower-text">Me</div>
-
+      <div class="frame1 img-frame">
+        <img class='pr1-img image' src="./images/first.png" alt="Carlos">
+      </div>
+      <div class="lower-text"></div>
     </article>
-
-    <article class="project second-project">
+        <article class="project second-project">
       <div class="upper-filler"></div>
-      <img class='pr1-img image' src="./images/mountains.png" alt="Mountain Style ruby on rails blog">
+      <div class="frame2 img-frame">
+        <img class='pr1-img image' src="./images/mountains.png" alt="Mountain Style ruby on rails blog">
+      </div>
       <div class="lower-text">Mountain Style ruby on rails blog</div>
     </article>
     <article class="project first-project">
       <div class="upper-filler"></div>
-      <img class='pr1-img image' src="./images/flowers-shop-responsive.png" alt="Flowers Shop fully responsive HTML & CSS site">
+      <div class="frame3 img-frame">
+        <img class='pr1-img image' src="./images/flowers-shop-responsive.png" alt="Flowers Shop fully responsive HTML & CSS site">
+      </div>
       <div class="lower-text">Flowers Shop fully responsive HTML & CSS site</div>
     </article>
     <article class="project third-project">
       <div class="upper-filler"></div>
-      <img class='pr1-img image' src="./images/newsweek.png" alt="Newsweek clone. Fully responsive Bootstrap site">
+      <div class="frame4 img-frame">
+        <img class='pr1-img image' src="./images/newsweek.png" alt="Newsweek clone. Fully responsive Bootstrap site">
+      </div>
       <div class="lower-text">Newsweek clone. Fully responsive Bootstrap site</div>
     </article>
-
   </main>
 </body>
 </html>
