--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="./assets/reset.css">
   <link rel="stylesheet" href="./assets/style.css">
-  <link href="https://fonts.googleapis.com/css2?family=Martel+Sans:wght@800&family=Work+Sans:wght@100;200&display=swap" rel="stylesheet"> 
+  <link href="https://fonts.googleapis.com/css2?family=Martel+Sans:wght@800&family=Work+Sans:wght@100;200;300&display=swap" rel="stylesheet"> 
   <title>Carlos Santamaria - Portfolio</title>
 </head>
 <body>
@@ -30,21 +31,58 @@
       <div class="frame2 img-frame">
         <img class='pr1-img image' src="./images/mountains.png" alt="Mountain Style ruby on rails blog">
       </div>
-      <div class="lower-text">Mountain Style ruby on rails blog</div>
+      <div class="lower-text">
+        <span class="project-name">
+          Mountain Style ruby on rails blog
+        </span>
+        <div class="project-links">
+          <a class='project-link' href="https://mountain-style.herokuapp.com/">
+            <i class="fa fa-globe"></i> Web site
+          </a>
+          <a class='project-link' href="https://github.com/Flakster/Mountain-Style2">
+            <i class="fa fa-github" aria-hidden="true"></i> Project in Github
+          </a>
+        </div>
+      </div>
     </article>
     <article class="project first-project">
       <div class="upper-filler"></div>
       <div class="frame3 img-frame">
         <img class='pr1-img image' src="./images/flowers-shop-responsive.png" alt="Flowers Shop fully responsive HTML & CSS site">
       </div>
-      <div class="lower-text">Flowers Shop fully responsive HTML & CSS site</div>
+      <div class="lower-text">
+        <span class="project-name">
+          Flowers Shop fully responsive HTML & CSS site
+        </span>
+        <div class="project-links">
+          <a class='project-link' href="https://flakster.github.io/Flowers-shop-site/index.html">
+            <i class="fa fa-globe"></i> Web site
+          </a>
+          <a class='project-link' href="https://github.com/Flakster/Flowers-shop-site">
+            <i class="fa fa-github" aria-hidden="true"></i> Project in Github
+          </a>
+        </div>
+      </div>
     </article>
     <article class="project third-project">
       <div class="upper-filler"></div>
       <div class="frame4 img-frame">
         <img class='pr1-img image' src="./images/newsweek.png" alt="Newsweek clone. Fully responsive Bootstrap site">
       </div>
-      <div class="lower-text">Newsweek clone. Fully responsive Bootstrap site</div>
+      <div class="lower-text">
+        <span class="project-name">
+          Newsweek clone. Fully responsive Bootstrap site
+        </span> 
+        <div class="project-links">
+          <a class='project-link' href="https://flakster.github.io/Newsweek-clone/">
+            <i class="fa fa-globe"></i> Web site
+          </a>
+          <a class='project-link' href="https://github.com/Flakster/Newsweek-clone">
+            <i class="fa fa-github" aria-hidden="true"></i> Project in Github
+          </a>
+        </div> 
+      </div>
+      
     </article>
   </main>
 </body>
