--- a/index.html
+++ b/index.html
@@ -15,31 +15,42 @@
       DEVELOPER. DESIGNER. FOCUSED & DRIVEN.
     </h1>
     <div class="subtitle">
-      Currently designing @Uber. Formerly Experience Design Director @GoPro and Interactive Director @Focus Lab. Follow my work, words and photos below. 
+      Full stack developer student at <a href="http://www.microverse.org" target="_blank">@Microverse</a> Follow my work and achievements below. 
+    </div>
+    <div class="social-links">
+      <a class="github" href="http://www.github.com/flakster" target="_blank">
+        <i class="fa fa-github" aria-hidden="true"></i>
+      </a>
+      <a class="linkedin" href="http://www.linkedin.com/in/cjsb" target="_blank">
+        <i class="fa fa-linkedin-square" aria-hidden="true"></i>
+      </a>
+      <a class="twitter" href="http://www.twitter.com/flakster" target="_blank">
+        <i class="fa fa-twitter" aria-hidden="true"></i>
+      </a>
     </div>
   </aside>
   <main class='content'>
     <article class="project fourth-project">
       <div class="upper-filler"></div>
       <div class="frame1 img-frame">
-        <img class='pr1-img image' src="./images/first.png" alt="Carlos">
+        <img class='image' src="./images/first.png" alt="Carlos">
       </div>
       <div class="lower-text"></div>
     </article>
         <article class="project second-project">
       <div class="upper-filler"></div>
       <div class="frame2 img-frame">
-        <img class='pr1-img image' src="./images/mountains.png" alt="Mountain Style ruby on rails blog">
+        <img class='image' src="./images/mountains.png" alt="Mountain Style ruby on rails blog">
       </div>
       <div class="lower-text">
         <span class="project-name">
           Mountain Style ruby on rails blog
         </span>
         <div class="project-links">
-          <a class='project-link' href="https://mountain-style.herokuapp.com/">
+          <a class='project-link' href="https://mountain-style.herokuapp.com/" target="_blank">
             <i class="fa fa-globe"></i> Web site
           </a>
-          <a class='project-link' href="https://github.com/Flakster/Mountain-Style2">
+          <a class='project-link' href="https://github.com/Flakster/Mountain-Style2" target="_blank">
             <i class="fa fa-github" aria-hidden="true"></i> Project in Github
           </a>
         </div>
@@ -48,17 +59,17 @@
     <article class="project first-project">
       <div class="upper-filler"></div>
       <div class="frame3 img-frame">
-        <img class='pr1-img image' src="./images/flowers-shop-responsive.png" alt="Flowers Shop fully responsive HTML & CSS site">
+        <img class='image' src="./images/flowers-shop-responsive.png" alt="Flowers Shop fully responsive HTML & CSS site">
       </div>
       <div class="lower-text">
         <span class="project-name">
           Flowers Shop fully responsive HTML & CSS site
         </span>
         <div class="project-links">
-          <a class='project-link' href="https://flakster.github.io/Flowers-shop-site/index.html">
+          <a class='project-link' href="https://flakster.github.io/Flowers-shop-site/index.html" target="_blank">
             <i class="fa fa-globe"></i> Web site
           </a>
-          <a class='project-link' href="https://github.com/Flakster/Flowers-shop-site">
+          <a class='project-link' href="https://github.com/Flakster/Flowers-shop-site" target="_blank">
             <i class="fa fa-github" aria-hidden="true"></i> Project in Github
           </a>
         </div>
@@ -67,23 +78,25 @@
     <article class="project third-project">
       <div class="upper-filler"></div>
       <div class="frame4 img-frame">
-        <img class='pr1-img image' src="./images/newsweek.png" alt="Newsweek clone. Fully responsive Bootstrap site">
+        <img class='image' src="./images/newsweek.png" alt="Newsweek clone. Fully responsive Bootstrap site">
       </div>
       <div class="lower-text">
         <span class="project-name">
           Newsweek clone. Fully responsive Bootstrap site
         </span> 
         <div class="project-links">
-          <a class='project-link' href="https://flakster.github.io/Newsweek-clone/">
+          <a class='project-link' href="https://flakster.github.io/Newsweek-clone/" target="_blank">
             <i class="fa fa-globe"></i> Web site
           </a>
-          <a class='project-link' href="https://github.com/Flakster/Newsweek-clone">
+          <a class='project-link' href="https://github.com/Flakster/Newsweek-clone" target="_blank">
             <i class="fa fa-github" aria-hidden="true"></i> Project in Github
           </a>
         </div> 
       </div>
-      
     </article>
+    <footer>
+      © 2020 Carlos Santamaría. 
+    </footer>
   </main>
 </body>
 </html>
