Reduce weight of the images

--- a/index.html
+++ b/index.html
@@ -15,16 +15,17 @@
       DEVELOPER. DESIGNER. FOCUSED & DRIVEN.
     </h1>
     <div class="subtitle">
-      Full stack developer student at <a href="http://www.microverse.org" target="_blank">@Microverse</a> Follow my work and achievements below. 
+      Full stack developer student at <a href="http://www.microverse.org" target="_blank">@Microverse</a> 
+      Follow my work and achievements below. 
     </div>
     <div class="social-links">
-      <a class="github" href="http://www.github.com/flakster" target="_blank">
+      <a class="icon github" href="http://www.github.com/flakster" target="_blank">
         <i class="fa fa-github" aria-hidden="true"></i>
       </a>
-      <a class="linkedin" href="http://www.linkedin.com/in/cjsb" target="_blank">
+      <a class="icon linkedin" href="http://www.linkedin.com/in/cjsb" target="_blank">
         <i class="fa fa-linkedin-square" aria-hidden="true"></i>
       </a>
-      <a class="twitter" href="http://www.twitter.com/flakster" target="_blank">
+      <a class="icon twitter" href="http://www.twitter.com/flakster" target="_blank">
         <i class="fa fa-twitter" aria-hidden="true"></i>
       </a>
     </div>
