Add info to the footer

--- a/index.html
+++ b/index.html
@@ -96,6 +96,21 @@
       </div>
     </article>
     <footer>
+      <div class="footer-social-links">
+        <a class="github-footer" href="http://www.github.com/flakster" target="_blank">
+          <i class="fa fa-github" aria-hidden="true"></i> Github
+        </a>
+        <a class="linkedin-footer" href="http://www.linkedin.com/in/cjsb" target="_blank">
+          <i class="fa fa-linkedin-square" aria-hidden="true"></i> Linkedin
+        </a>
+        <a class="twitter-footer" href="http://www.twitter.com/flakster" target="_blank">
+          <i class="fa fa-twitter" aria-hidden="true"></i> Twitter
+        </a>
+      </div>
+      <div class="attributions">
+        Mockups from <a href="https://graphicburger.com/">Graphic Burguer</a>
+        Design by <a href="http://charliewaite.me/">Charlie Waite</a>
+      </div>
       © 2020 Carlos Santamaría. 
     </footer>
   </main>
