Add contact button

--- a/index.html
+++ b/index.html
@@ -29,6 +29,11 @@
         <i class="fa fa-twitter" aria-hidden="true"></i>
       </a>
     </div>
+    <a class="contact-link" href="mailto:carlos.santamaria@gmaial.com?subject=Portfolio%20message">
+      <div class="contact-box">
+        <div class="contact-msg"> Leave me a message! </div>
+      </div>
+    </a>
   </aside>
   <main class='content'>
     <article class="project fourth-project">
@@ -108,8 +113,8 @@
         </a>
       </div>
       <div class="attributions">
-        Mockups from <a href="https://graphicburger.com/">Graphic Burguer</a>
-        Design by <a href="http://charliewaite.me/">Charlie Waite</a>
+        Mockups from <a href="https://graphicburger.com/" target="_blank">Graphic Burguer</a>
+        Design by <a href="http://charliewaite.me/" target="_blank">Charlie Waite</a>
       </div>
       © 2020 Carlos Santamaría. 
     </footer>
