Fix an error in the email address

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <i class="fa fa-twitter" aria-hidden="true"></i>
       </a>
     </div>
-    <a class="contact-link" href="mailto:carlos.santamaria@gmaial.com?subject=Portfolio%20message">
+    <a class="contact-link" href="mailto:carlos.santamaria@gmail.com?subject=Portfolio%20message">
       <div class="contact-box">
         <div class="contact-msg"> Leave me a message! </div>
       </div>
