--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="./assets/reset.css">
   <link rel="stylesheet" href="./assets/style.css">
+  <link rel="shortcut icon" href="./images/favicon.ico" type="image/x-icon">
   <link href="https://fonts.googleapis.com/css2?family=Martel+Sans:wght@800&family=Work+Sans:wght@100;200;300&display=swap" rel="stylesheet"> 
   <title>Carlos Santamaria - Portfolio</title>
 </head>
