Fix position of some elements in mobile resolution

--- a/index.html
+++ b/index.html
@@ -123,8 +123,7 @@
       <h2 class="subtitle">About me</h2>
     </a>
     <div class="about-box">
-      In three sentences describe who you are as a proffessional. Look through some of my work and experience! If you like what you see and have project 
-you need coded, don’t hesistate to contact me.
+      I'm a computer sciences engineer passionate about help others to get the most of technology. Through my experience I've had the opportunity to teach others as also as be a persistent learner.
     </div>
     <div class="resume-btn">
       <a href="https://docs.google.com/document/d/1ZOYh5wr2sgtXx5cFIlHgOaMihYvFZJAlu5ravi92BYg/edit?usp=sharing" target="_blank">Get my resume</a> 
