Adjust mobile layout

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
       <h2 class="subtitle">My Portfolio</h2>
     </a>
     <div class="portfolio-box">
-      <div class="preview1 preview">
+      <div class="preview1 preview" onclick="">
         <div class="tech-list">
           <span>HTML/CSS</span>
           <span>JavaScript</span>
@@ -73,7 +73,7 @@
         <div class="preview-name">Weather App</div>
         <div class="btn-preview" onclick="showPreview('project1')">See the project</div> 
       </div>
-      <div class="preview2 preview">
+      <div class="preview2 preview" onclick="">
         <div class="tech-list">
           <span>Ruby on Rails</span>
           <span>PostgreSQL</span>
@@ -82,7 +82,7 @@
         <div class="preview-name">Mountain Style blog</div>
         <div class="btn-preview" onclick="showPreview('project2')">See the project</div> 
       </div>
-      <div class="preview3 preview">
+      <div class="preview3 preview" onclick="">
         <div class="tech-list">
           <span>HTML/CSS</span>
           <span>Flexbox</span>
@@ -91,7 +91,7 @@
         <div class="preview-name">Flowers Shop</div>
         <div class="btn-preview" onclick="showPreview('project3')">See the project</div> 
       </div>
-      <div class="preview4 preview">
+      <div class="preview4 preview" onclick="">
         <div class="tech-list">
           <span>HTML/CSS</span>
           <span>JavaScript</span>
@@ -100,7 +100,7 @@
         <div class="preview-name">Vegan Delights Restaurant</div>
         <div class="btn-preview" onclick="showPreview('project4')">See the project</div> 
       </div>
-      <div class="preview5 preview">
+      <div class="preview5 preview" onclick="">
         <div class="tech-list">
           <span>JavaScript</span>
           <span>HTML/CSS</span>
@@ -109,7 +109,7 @@
         <div class="preview-name">Platform Game</div>
         <div class="btn-preview" onclick="showPreview('project5')">See the project</div> 
       </div>
-      <div class="preview6 preview">
+      <div class="preview6 preview" onclick="">
         <div class="tech-list">
           <span>Ruby on Rails</span>
           <span>PostgreSQL</span>
