--- a/index.html
+++ b/index.html
@@ -6,6 +6,16 @@
   <link rel="stylesheet" href="./assets/stylesheets/reset.css">
   <link rel="stylesheet" href="./assets/stylesheets/style.css">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet"> 
+  <!-- Primary Meta Tags -->
+  <meta name="title" content="Carlos Santamaría's Portfolio">
+  <meta name="description" content="Showcase of my works and experience">
+  <meta name="keywords" content="Javascript, webpack, HTML, CSS, Ruby, Rails, Bootstrap, React, Redux">
+  <meta name="robots" content="index, follow">
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+  <meta name="language" content="English">
+  <meta property="og:image" content="./assets/images/preview.png">
+  <meta name="author" content="Carlos J. Santamaria" />
+  <meta name='date' content='September. 20, 2020'>  
   <title>Carlos Santamaria Portfolio</title>
 </head>
 <body>
