--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <meta name="robots" content="index, follow">
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
   <meta name="language" content="English">
-  <meta property="og:image" content="./assets/images/preview.png">
+  <meta property="og:image" content="http://www.carlossantamaria.co/assets/images/preview.png">
   <meta name="author" content="Carlos J. Santamaria" />
   <meta name='date' content='September. 20, 2020'>  
   <title>Carlos Santamaria Portfolio</title>
