Fix a mistake in the description of the projects

--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
         <div class="tech">Webpack</div>
       </div>
       <div class="project-description">
-        Restaurant javascript website. The site consists of three pages each of them in a module which is called from the index.js depending on the user's choice in a tabbed navigation bar
+        Javascript asynchronous application that requests data from the OpenWeatherMap Api by using promises in the way of async/await calls
       </div>
     </div>
   </div>
@@ -302,7 +302,7 @@
         <div class="tech">HTML/CSS</div>
       </div>
       <div class="project-description">
-        This is a website project based on the Flowers Shop design from Michael D. It is intended to be fully responsive.
+        Restaurant javascript website. The site consists of three pages each of them in a module which is called from the index.js depending on the user's choice in a tabbed navigation bar
       </div>
     </div>
   </div> 
