Fix a mistake in a project description

--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
         </div>
       </div>
       <h3 class="project-name">
-        Weather App
+        Mountain Style Blog
       </h3>
       <div class="technologies">
         <div class="tech">Ruby/Rails</div>
