--- a/index.html
+++ b/index.html
@@ -202,6 +202,9 @@
     </div>
     <div class="bottom-line">
       © 2020  Carlos Santamaría
+      <div class="attribution">
+        Mockups from <a href="https://graphicburger.com/" target="_blank">Graphic Burguer</a>
+      </div>
     </div>
     
   </main>
